AC_INIT([nav_sched_dual] ,[0.01])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile])
CXXFLAGS="-O3"  # Replace with the flags you want (e.g., optimization level)
CFLAGS="-O3"  # Replace with the flags you want (e.g., optimization level)
AC_SUBST(CXXFLAGS)
AC_SUBST(CFLAGS)
AC_PROG_CC
AC_PROG_CXX
AC_OUTPUT
