AC_INIT([navtexreceiver] ,[0.01])
AM_INIT_AUTOMAKE([foreign])
CXXFLAGS="-O3"  # Replace with the flags you want (e.g., optimization level)
CFLAGS="-O3"  # Replace with the flags you want (e.g., optimization level)
AC_SUBST(CXXFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST([DATA_DIR], ['/opt/Navtex/'])
# Define the data file path
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
AC_PROG_CXX
AC_OUTPUT
